--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'American fiction -- 20th century'
 - !lcc 'PS'
+- GITenberg
 title: Black Oxen
 url: http://www.gutenberg.org/ebooks/25542
